# advent-of-code-rust-2023

./: Cargo.toml  README.md
.github/workflows/: ci.yml  readme-stars.yml
data/examples/: 13-3.txt
src/: lib.rs
